# CudaVisionEngine

./: .gitignore  CMakeLists.txt  README.md
include/: Convolution.cuh  EdgeDetection.cuh  ElementaryMatrixOp.cuh  EngineFactory.cuh  EngineManagement.cuh  OperationWrapper.cuh  Smoothing.cuh  Thresholding.cuh  main.h  stb_impl.h
src/: Convolution.cu  EdgeDetection.cu  ElementaryMatrixOp.cu  EngineFactory.cu  EngineManagement.cu  OperationWrapper.cu  Smoothing.cu  Thresholding.cu  main.cpp  stb_impl.cpp
